rust/src/ukv/bindings.rs

#[doc = " @brief Lists all named collections in the DB.\n @see `ukv_collection_list()`.\n\n Retrieves a list of collection IDs & names in a NULL-delimited form.\n The default nameless collection won't be described in any form, as its always\n present. This is the only collection-management operation that can be performed\n on a DB state snapshot, and not just on the HEAD state."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ukv_collection_list_t {
	#[doc = " @brief Already open database instance."]
	pub db: ukv_database_t,
	#[doc = " @brief Pointer to exported error message.\n If not NULL, must be deallocated with `ukv_error_free()`."]
	pub error: *mut ukv_error_t,
	#[doc = " @brief The snapshot in which the retrieval will be conducted.\n @see `ukv_transaction_init()`, `ukv_transaction_commit()`, `ukv_transaction_free()`."]
	pub transaction: ukv_transaction_t,
	#[doc = " @brief Reusable memory handle.\n @see `ukv_arena_free()`."]
	pub arena: *mut ukv_arena_t,
	#[doc = " @brief Listing options.\n\n Possible values:\n - `::ukv_option_dont_discard_memory_k`: Won't reset the `arena` before the operation begins."]
	pub options: ukv_options_t,
	#[doc = " @brief Number of present collections."]
	pub count: *mut ukv_size_t,
	#[doc = " @brief Handles of all the collections in same order as `names`."]
	pub ids: *mut *mut ukv_collection_t,
	#[doc = " @brief Offsets of separate strings in the `names` tape."]
	pub offsets: *mut *mut ukv_length_t,
	#[doc = " @brief NULL-terminated collection names tape in same order as `ids`."]
	pub names: *mut *mut ukv_char_t,
}
#[test]
fn bindgen_test_layout_ukv_collection_list_t() {
	const UNINIT: ::std::mem::MaybeUninit<ukv_collection_list_t> =
		::std::mem::MaybeUninit::uninit();
	let ptr = UNINIT.as_ptr();
	assert_eq!(
		::std::mem::size_of::<ukv_collection_list_t>(),
		72usize,
		concat!("Size of: ", stringify!(ukv_collection_list_t))
	);
	assert_eq!(
		::std::mem::align_of::<ukv_collection_list_t>(),
		8usize,
		concat!("Alignment of ", stringify!(ukv_collection_list_t))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).db) as usize - ptr as usize },
		0usize,
		concat!("Offset of field: ", stringify!(ukv_collection_list_t), "::", stringify!(db))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).error) as usize - ptr as usize },
		8usize,
		concat!("Offset of field: ", stringify!(ukv_collection_list_t), "::", stringify!(error))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).transaction) as usize - ptr as usize },
		16usize,
		concat!(
			"Offset of field: ",
			stringify!(ukv_collection_list_t),
			"::",
			stringify!(transaction)
		)
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).arena) as usize - ptr as usize },
		24usize,
		concat!("Offset of field: ", stringify!(ukv_collection_list_t), "::", stringify!(arena))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).options) as usize - ptr as usize },
		32usize,
		concat!("Offset of field: ", stringify!(ukv_collection_list_t), "::", stringify!(options))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).count) as usize - ptr as usize },
		40usize,
		concat!("Offset of field: ", stringify!(ukv_collection_list_t), "::", stringify!(count))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).ids) as usize - ptr as usize },
		48usize,
		concat!("Offset of field: ", stringify!(ukv_collection_list_t), "::", stringify!(ids))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).offsets) as usize - ptr as usize },
		56usize,
		concat!("Offset of field: ", stringify!(ukv_collection_list_t), "::", stringify!(offsets))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).names) as usize - ptr as usize },
		64usize,
		concat!("Offset of field: ", stringify!(ukv_collection_list_t), "::", stringify!(names))
	);
}
extern "C" {
	#[doc = " @brief Lists all named collections in the DB.\n @see `ukv_collection_list_t`."]
	pub fn ukv_collection_list(arg1: *mut ukv_collection_list_t);
}
#[doc = " @brief Creates a new uniquely named collection in the DB.\n @see `ukv_collection_create()`.\n\n This function may never be called, as the default nameless collection\n always exists and can be addressed via `::ukv_collection_main_k`.\n You can \"re-create\" an empty collection with a new config."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ukv_collection_create_t {
	#[doc = " @brief Already open database instance."]
	pub db: ukv_database_t,
	#[doc = " @brief Pointer to exported error message."]
	pub error: *mut ukv_error_t,
	#[doc = " @brief Unique name for the new collection."]
	pub name: ukv_str_view_t,
	#[doc = " @brief Optional configuration JSON string."]
	pub config: ukv_str_view_t,
	#[doc = " @brief Output for the collection handle."]
	pub id: *mut ukv_collection_t,
}
#[test]
fn bindgen_test_layout_ukv_collection_create_t() {
	const UNINIT: ::std::mem::MaybeUninit<ukv_collection_create_t> =
		::std::mem::MaybeUninit::uninit();
	let ptr = UNINIT.as_ptr();
	assert_eq!(
		::std::mem::size_of::<ukv_collection_create_t>(),
		40usize,
		concat!("Size of: ", stringify!(ukv_collection_create_t))
	);
	assert_eq!(
		::std::mem::align_of::<ukv_collection_create_t>(),
		8usize,
		concat!("Alignment of ", stringify!(ukv_collection_create_t))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).db) as usize - ptr as usize },
		0usize,
		concat!("Offset of field: ", stringify!(ukv_collection_create_t), "::", stringify!(db))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).error) as usize - ptr as usize },
		8usize,
		concat!("Offset of field: ", stringify!(ukv_collection_create_t), "::", stringify!(error))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
		16usize,
		concat!("Offset of field: ", stringify!(ukv_collection_create_t), "::", stringify!(name))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).config) as usize - ptr as usize },
		24usize,
		concat!("Offset of field: ", stringify!(ukv_collection_create_t), "::", stringify!(config))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).id) as usize - ptr as usize },
		32usize,
		concat!("Offset of field: ", stringify!(ukv_collection_create_t), "::", stringify!(id))
	);
}
extern "C" {
	#[doc = " @brief Creates a new uniquely named collection in the DB.\n @see `ukv_collection_create_t`."]
	pub fn ukv_collection_create(arg1: *mut ukv_collection_create_t);
}
#[doc = " @brief Removes or clears an existing collection.\n @see `ukv_collection_drop()`.\n\n Removes a collection or its contents depending on `mode`.\n The default nameless collection can't be removed, only cleared."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ukv_collection_drop_t {
	#[doc = " @brief Already open database instance."]
	pub db: ukv_database_t,
	#[doc = " @brief Pointer to exported error message."]
	pub error: *mut ukv_error_t,
	#[doc = " @brief Existing collection handle."]
	pub id: ukv_collection_t,
	#[doc = " @brief Controls if values, pairs or the whole collection must be dropped."]
	pub mode: ukv_drop_mode_t,
}
#[test]
fn bindgen_test_layout_ukv_collection_drop_t() {
	const UNINIT: ::std::mem::MaybeUninit<ukv_collection_drop_t> =
		::std::mem::MaybeUninit::uninit();
	let ptr = UNINIT.as_ptr();
	assert_eq!(
		::std::mem::size_of::<ukv_collection_drop_t>(),
		32usize,
		concat!("Size of: ", stringify!(ukv_collection_drop_t))
	);
	assert_eq!(
		::std::mem::align_of::<ukv_collection_drop_t>(),
		8usize,
		concat!("Alignment of ", stringify!(ukv_collection_drop_t))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).db) as usize - ptr as usize },
		0usize,
		concat!("Offset of field: ", stringify!(ukv_collection_drop_t), "::", stringify!(db))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).error) as usize - ptr as usize },
		8usize,
		concat!("Offset of field: ", stringify!(ukv_collection_drop_t), "::", stringify!(error))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).id) as usize - ptr as usize },
		16usize,
		concat!("Offset of field: ", stringify!(ukv_collection_drop_t), "::", stringify!(id))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).mode) as usize - ptr as usize },
		24usize,
		concat!("Offset of field: ", stringify!(ukv_collection_drop_t), "::", stringify!(mode))
	);
}
extern "C" {
	#[doc = " @brief Removes or clears an existing collection.\n @see `ukv_collection_drop_t`."]
	pub fn ukv_collection_drop(arg1: *mut ukv_collection_drop_t);
}
#[doc = " @brief Free-form communication tunnel with the underlying engine.\n @see `ukv_database_control()`.\n\n Performs free-form queries on the DB, that may not necessarily\n have a stable API and a fixed format output. Generally, those requests\n are very expensive and shouldn't be executed in most applications.\n This is the \"kitchen-sink\" of UKV interface, similar to `fcntl` & `ioctl`.\n\n ## Possible Commands\n - \"clear\":   Removes all the data from DB, while keeping collection names.\n - \"reset\":   Removes all the data from DB, including collection names.\n - \"compact\": Flushes and compacts all the data in LSM-tree implementations.\n - \"info\":    Metadata about the current software version, used for debugging.\n - \"usage\":   Metadata about approximate collection sizes, RAM and disk usage."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ukv_database_control_t {
	#[doc = " @brief Already open database instance."]
	pub db: ukv_database_t,
	#[doc = " @brief Reusable memory handle."]
	pub arena: *mut ukv_arena_t,
	#[doc = " @brief Pointer to exported error message."]
	pub error: *mut ukv_error_t,
	#[doc = " @brief The input command as a NULL-terminated string."]
	pub request: ukv_str_view_t,
	#[doc = " @brief The output response as a NULL-terminated string."]
	pub response: *mut ukv_str_view_t,
}
#[test]
fn bindgen_test_layout_ukv_database_control_t() {
	const UNINIT: ::std::mem::MaybeUninit<ukv_database_control_t> =
		::std::mem::MaybeUninit::uninit();
	let ptr = UNINIT.as_ptr();
	assert_eq!(
		::std::mem::size_of::<ukv_database_control_t>(),
		40usize,
		concat!("Size of: ", stringify!(ukv_database_control_t))
	);
	assert_eq!(
		::std::mem::align_of::<ukv_database_control_t>(),
		8usize,
		concat!("Alignment of ", stringify!(ukv_database_control_t))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).db) as usize - ptr as usize },
		0usize,
		concat!("Offset of field: ", stringify!(ukv_database_control_t), "::", stringify!(db))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).arena) as usize - ptr as usize },
		8usize,
		concat!("Offset of field: ", stringify!(ukv_database_control_t), "::", stringify!(arena))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).error) as usize - ptr as usize },
		16usize,
		concat!("Offset of field: ", stringify!(ukv_database_control_t), "::", stringify!(error))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).request) as usize - ptr as usize },
		24usize,
		concat!("Offset of field: ", stringify!(ukv_database_control_t), "::", stringify!(request))
	);
	assert_eq!(
		unsafe { ::std::ptr::addr_of!((*ptr).response) as usize - ptr as usize },
		32usize,
		concat!(
			"Offset of field: ",
			stringify!(ukv_database_control_t),
			"::",
			stringify!(response)
		)
	);
}
extern "C" {
	#[doc = " @brief Free-form communication tunnel with the underlying engine.\n @see `ukv_database_control()`."]
	pub fn ukv_database_control(arg1: *mut ukv_database_control_t);
}
